--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,19 @@
     package="com.example.mykotlin">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyKotlin">
-        <activity android:name=".WordsDetailActivity" />
-        <activity android:name=".WordsActivity" />
-        <activity android:name=".AffirmationsActivity">
+        android:theme="@style/Theme.MyKotlin"
+        android:allowBackup="">
+        <activity android:name=".WordsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AffirmationsActivity" />
         <activity android:name=".TipTimeActivity" />
         <activity android:name=".DiceActivity" />
         <activity android:name=".CardActivity" />
