--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyKotlin"
-        android:allowBackup="">
+        android:allowBackup="true">
         <activity android:name=".WordsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
