--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.nav_version = "2.3.1"
     repositories {
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
@@ -18,6 +19,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        jcenter()
     }
 }
 
